♻refactor #S10P21C101-backend ApprovalService 수정